--- a/.github/workflows/work-1.yml
+++ b/.github/workflows/work-1.yml
@@ -11,3 +11,10 @@ jobs:
         run: echo "Hi"
       - name: sayMyName
         run: echo "${{ github.actor }}"
+  hello2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: sayHello
+        run: echo "Hello"
+      - name: sayMyName
+        run: echo "${{ github.actor }}"
